hphp/test/slow/parser/initializer-static-1.php.expectf

Fatal error: Expected constant expression for initializer in %s/initializer-static-1.php on line 4
